[package]
name = "watchdog-demo"
version = "0.1.0"
edition = "2021"
default-run = "gui"

[dependencies]
anyhow = "1.0.71"
clap = { version = "3", features = ["derive"] }
humantime = "2.1.0"
klask = { git = "https://github.com/MichalGniadek/klask" }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
watchdog = { version = "0.1.0", git = "https://www.github.com/barafael/watchdog", features = [
    "serde",
    "cli",
] }
